Addtions of DISARP paper

--- a/dissertation.html
+++ b/dissertation.html
@@ -17,7 +17,8 @@
 			<a href="index.html"><i class="fa fa-long-arrow-up"></i></a>			
 			<h1 class="head"> Documents From My Degree </h1>	
 			<div class="opener navigate">
-					<a href="">| Dissertation |</a>					
+					<a href="">| Dissertation |</a>
+					<a href="">| Papers |</a>				
 			</div>
 			<div class ="appSection">
 				<h1 class="appTitle">Dissertation</h1>
@@ -27,6 +28,16 @@
 			<p> Wearable devices are ever more present in today‟s technology market. These devices integrate with smart phones with the intent to make our data more accessible. However, the way we interact with that data is still the same on wearable devices, tapping on a screen or pressing buttons. In order for wearable technology to improve the ease of use of our smart devices, a technology must be found that is natural and easy for a user to operate. This project suggests gesture control as the solution. By building a library, Gebble.js, that implements gesture control for the Pebble smart watch, it allows developers to become more involved with gesture control. Instead of creating just another application, they could build a better user experience utilising a more natural way for consumers to interact with their data.
 			</p>
 			<a href="documents/Improving the Ease of Use on Smart Watches, with Gesture Control.pdf"><h2>View the document</h2></a>			
+			</div>
+			</div>
+			<div class ="appSection">
+				<h1 class="appTitle">Papers</h1>
+			</div>
+			<div class = "details">
+			<h2> Abstract for Improving Vehicle Location Based Distributed Systems with Vehicle Ad Hoc Networks </h2>
+			<p> In our ever more connected world, the need for fast, but accurate data in response to our requests is most certainly applicable to any distributed system currently in operation. The global positioning system or GPS, is one such distributed system. However, in our most populated areas, as well as in-accuracy in criss-crossing streets and roads, GPS is hampered by buildings blocking the radio signal intended to be received by our satellites. This creates a general problem of not only no reception but the time it takes to reconnect and for the device to find itself again. Time-to-first fix (TTFF) is slow regarding to a moving vehicle’s needs. From the best case scenario, a Hot start, TTFF is supposed to be 1-3 seconds. With the new approach of GSM-R to connect our railways and Assisted-GPS now in use in our phones, I propose that a Vehicular Ad Hoc Network (VANET) should be used to improve the on-board GPS in vehicles to decrease connection time, improve the loss of reception and overall accuracy in positioning. Many different algorithms have been suggested and simulated for VANETS, such as Greedy Perimeter Coordinator Routeing (GPCR) and the Bidirectional Search Algorithm. In this paper, we will compare connection time of the different antenna approaches to VANET, with the current approach in GPS. This will be done in each of its three states, Cold, Warm and Hot connections. Using Microsoft Excel to calculate maximum transfer time, it should show that using a VANET will improve the time it takes to find your relative location in vehicles, in an urban environment.
+			</p>
+			<a href="documents/Improving Vehicle Location Based Distributed Systems with Vehicle Ad Hoc Networks.pdf"><h2>View the document</h2></a>			
 			</div>
 			<footer>
 			<div class="picturelinks">
