--- a/dissertation.html
+++ b/dissertation.html
@@ -17,11 +17,11 @@
 			<a href="index.html"><i class="fa fa-long-arrow-up"></i></a>			
 			<h1 class="head"> Documents From My Degree </h1>	
 			<div class="opener navigate">
-					<a href="">| Dissertation |</a>
-					<a href="">| Papers |</a>				
+					<a href="dissertation.html#dissertation">| Dissertation |</a>
+					<a href="dissertation.html#papers">| Papers |</a>				
 			</div>
 			<div class ="appSection">
-				<h1 class="appTitle">Dissertation</h1>
+				<h1 class="appTitle" id="dissertation" >Dissertation</h1>
 			</div>
 			<div class = "details">
 			<h2> Abstract for Improving the Ease of Use on Smart Watches, with Gesture Control </h2>
@@ -30,7 +30,7 @@
 			<a href="documents/Improving the Ease of Use on Smart Watches, with Gesture Control.pdf"><h2>View the document</h2></a>			
 			</div>
 			<div class ="appSection">
-				<h1 class="appTitle">Papers</h1>
+				<h1 class="appTitle" id="papers" >Papers</h1>
 			</div>
 			<div class = "details">
 			<h2> Abstract for Improving Vehicle Location Based Distributed Systems with Vehicle Ad Hoc Networks </h2>
